--- a/assignment2/figma2.html
+++ b/assignment2/figma2.html
@@ -211,5 +211,106 @@
                 </ul>
             </div>
         </div>
+         <!-- page 8 -->
+        <div class="page_8">
+            <div class="image_8">
+                <img src="Apps.png">
+            </div>
+            <div class="page_8_1">
+                <h1>
+                    Work with Your<br>
+                    Favorite Apps Using<br>
+                    whitepace
+                </h1>
+                <p>
+                    Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to<br>
+                    have all the tools you need for your project success.
+                </p>
+                <div class="button_1">
+                    <button>Read more<i class='bx bx-right-arrow-alt bx-flip-vertical' style='color:#fffdfd'></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- page 9 -->
+        <div class="page_9">
+            <div class="heading">
+                <h1>What Our Clients Says</h1>
+            </div>
+        </div>
+        <div class="para_0">
+            <!-- para -->
+              <div class="para_1">
+                  <img src="Group1.png">
+                  <p>
+                      Whitepate is designed as a collaboration tool<br>
+                      for businesses that is a full project management<br>
+                      solution.
+                  </p>
+                  <hr>
+                    <div class="para_1_1">
+                           <div class="avater_1">
+                               <img src="Avater 3.png">
+                           </div>
+                           <div class="textt1">
+                               <h3>Oberon Shaw, MCH  </h3>
+                               <p>Head of Talent Acquisition, North<br>
+                                  America</p>
+                           </div>
+                    </div>
+              </div>
+              <!-- para 2 -->
+              <div class="para_2">
+                <img src="Group 2.png">
+                <p>
+                    Whitepate is designed as a collaboration tool<br>
+                    for businesses that is a full project management<br>
+                    solution.
+                </p>
+                <hr>
+                  <div class="para_1_2">
+                         <div class="avater_2">
+                             <img src="Avater 2.png">
+                         </div>
+                         <div>
+                             <h3>Oberon Shaw, MCH  </h3>
+                             <p>Head of Talent Acquisition, North<br>
+                                America</p>
+                         </div>
+                  </div>
+               </div>
+              <!-- para 3 -->
+              <div class="para_2">
+                <img src="Group 2.png">
+                <p>
+                    Whitepate is designed as a collaboration tool<br>
+                    for businesses that is a full project management<br>
+                    solution.
+                </p>
+                <hr>
+                  <div class="para_1_2">
+                         <div class="avater_3">
+                             <img src="Avater.png">
+                         </div>
+                         <div>
+                             <h3>Oberon Shaw, MCH  </h3>
+                             <p>Head of Talent Acquisition, North<br>
+                                America</p>
+                         </div>
+                  </div>
+            </div>
+        </div>
+        <!-- last page -->
+        <div class="foot">
+            <div class="headerr_0"> 
+                <h1>
+                    Try Whitepace today
+                </h1>
+                <p>Get started for free.</p>
+                <p>Add your whole team as your needs grow.</p>
+                <button>Try Taskey free<i class='bx bx-right-arrow-alt bx-flip-vertical' style='color:#fffdfd'></i></button>
+                <p>On a big team? Contact sales</p>
+                <img src="App-icon.png">
+            </div>
+        </div>
 </body>
 </html>
