--- a/assignment2/figma2.html
+++ b/assignment2/figma2.html
@@ -51,6 +51,7 @@
     <div class="page_2">
         <div class="section_1">
             <div class="project">
+                <img class="imgg_1" src="Element 3.png">
                 <h1>Project<br>
                     Management</h1>
                     <p>Images, videos, PDFs and audio files are supported. Create math expressions and<br>
@@ -72,6 +73,7 @@
                     <img src="Work Together Image.png">
                 </div>
                 <div class="project">
+                    <img class="imagg_2" src="Element 3.png">   
                     <h1>Work together</h1>
                         <p>Images, videos, PDFs and audio files are supported. Create math expressions and<br>
                         diagrams directly from the app. Take photos with the mobile app and save them<br>
@@ -303,14 +305,72 @@
         <div class="foot">
             <div class="headerr_0"> 
                 <h1>
-                    Try Whitepace today
+                    Try Whitepace<br>
+                    today
                 </h1>
-                <p>Get started for free.</p>
-                <p>Add your whole team as your needs grow.</p>
+                <p>Get started for free.<br>
+                Add your whole team as your needs grow.</p>
                 <button>Try Taskey free<i class='bx bx-right-arrow-alt bx-flip-vertical' style='color:#fffdfd'></i></button>
                 <p>On a big team? Contact sales</p>
                 <img src="App-icon.png">
             </div>
         </div>
+        <!-- footer -->
+        <div class="last_1">
+            <div class="last_2">
+                <div class="font_2">
+                    <img src="Logo.png">
+                    <p>whitepace was created for<br>
+                        the new ways we live and<br>
+                        work. We make a better<br>
+                        workspace around the world</p>
+                </div>
+                <div class="font_1">
+                    <h4>Product</h4>
+                    <p>Overview</p>
+                    <p>Pricing</p>
+                    <p>Customer stories</p>
+                </div>
+                <div class="font_1">
+                    <h4>Resources</h4>
+                    <p>Blog</p>
+                    <p>Guides & tutorials</p>
+                    <p>Help center</p>
+                </div>
+                <div class="font_1">
+                    <h4>Company</h4>
+                    <p>About us</p>
+                    <p>Careers</p>
+                    <p>Media kit</p>
+                </div>
+                <div class="font_1">
+                    <h3>Try It Today</h3>
+                    <p>Get started for free.Add your<br>
+                       whole team as your needs grow.</p>
+                    <button>Start today<i class='bx bx-right-arrow-alt bx-flip-vertical' style='color:#fffdfd'></i></button>
+                </div>
+            </div>
+            <hr>
+    <div class="foott_0">
+        <div class="foott_1">
+            <div>
+                <div><img src="Language.png"></div>
+            </div>
+            <div>
+                <p>Terms & privacy</p>
+            </div>
+            <div>
+                <p>Security</p>
+            </div>
+            <div>
+                <p>Status</p>
+            </div>
+            <div>
+                <p>©2021 Whitepace LLC.</p>
+            </div>
+        </div>
+        <div><img src="Social Icon.png"></div>
+      </div>
+    </div>
 </body>
 </html>
